--- a/flask_app/templates/signup.html
+++ b/flask_app/templates/signup.html
@@ -7,26 +7,26 @@
      {% with messages = get_flashed_messages() %}
         {% if messages %}
             <div class="notification is-danger">
-                {{ messages[0] }}. <a href="{{ url_for('auth_bp.login') }}"> Go to login page</a>.
+                {{ messages[0] }}. <a href="{{ url_for('auth.login') }}"> Go to login page</a>.
             </div>
         {% endif %}
      {% endwith %}
         <form method="POST" >
             <div class="field">
                 <div class="control">
-                    <input class="input is-large" type="email" name="email" placeholder="Email" autofocus="">
+                    <input class="input is-large" type="email" name="email" placeholder="Email" autofocus="" required>
                 </div>
             </div>
 
             <div class="field">
                 <div class="control">
-                    <input class="input is-large" type="text" name="name" placeholder="Name" autofocus="">
+                    <input class="input is-large" type="text" name="name" placeholder="Name" autofocus="" required>
                 </div>
             </div>
 
             <div class="field">
                 <div class="control">
-                    <input class="input is-large" type="password" name="password" placeholder="Password">
+                    <input class="input is-large" type="password" name="password" placeholder="Password" required>
                 </div>
             </div>
 
